@@ -1,3 +1,6 @@
+2007-04-04 Ian Rutt
+ * Plumbed anomaly coupling into Glint
+
 2007-04-02 Ian Rutt
  * Further work on anomaly coupling. Added to build.
  * Fixed bugs - tested and seems to work
